@@ -35,6 +35,13 @@
     Requested by, Patch:  Konstantin Ryabitsev <icon add mricon dot com>
     Appplied by: Bas van der Vlies
 
+  * Added a new option 'strip_signature_regex', default value: 
+      * '^-----Original Message-----$|^-- $'
+    This will strip signatures form the email messages. People can set their own regular
+    expressions, closes #296, #155
+    Author: steverweber add gmail dot com
+    Appplied by: Bas van der Vlies
+
 2.5.0 
   * BLOG improvements by Thomas Moschny, closes #287,#235,#175:
    - Tries to use the 'Date:' email header to set the date of the blog
